[gd_scene load_steps=4 format=3 uid="uid://brvdccvwjv0n6"]

[ext_resource type="Script" path="res://ui/LeaderboardUI.gd" id="1_hyyr0"]
[ext_resource type="Texture2D" uid="uid://cbx183bn0nni4" path="res://ui/green_border_1.png" id="2_k7vp2"]
[ext_resource type="FontFile" uid="uid://bf0q0pmkhfebo" path="res://fonts/PixelTandysoft-0rJG.ttf" id="3_ni5sf"]

[node name="LeaderboardUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
script = ExtResource("1_hyyr0")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_k7vp2")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -56.0
offset_top = -112.0
offset_right = 1104.0
offset_bottom = 118.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("3_ni5sf")
theme_override_font_sizes/font_size = 180
text = "Leaderboard"

[node name="ScoreScroll" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = -112.0
offset_top = -76.0
offset_right = 112.0
offset_bottom = 112.0

[node name="ScoreContainer" type="VBoxContainer" parent="ScoreScroll"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = 70.333
offset_right = 732.0
offset_bottom = 210.333
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme_override_constants/separation = 250

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ni5sf")
theme_override_font_sizes/font_size = 100
text = "Retry"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ni5sf")
theme_override_font_sizes/font_size = 100
text = "Quit"

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
